# gd_gst_service

./: .gitignore  CMakeLists.txt  README.md  build_gd_gst.sh  build_static_gstreamer_packages.sh  project.godot  setup_example.sh  ubuntu_24.04_build.dockerfile
assets/: loading_100x100.png.import  start_icon_100x100.png.import
include/gd_gst_service/: formatter.hpp  gd_gst_service.hpp  register_types.hpp
include/gd_gst_service/gst_service/: gst_service.hpp
scenes/: gd_gst_example.tscn  stream_panel.tscn
scripts/: gd_gst_example.gd  gd_stream_example.gd  stream_panel.gd
src/: gd_gst_service.cpp  register_types.cpp
src/gst_service/: gst_service.cpp
tests/: test_gd_gst_service.cpp  test_gst_service.cpp  test_gstreamer.cpp
